Add builder directory and profile room ratings
